<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Log In</string>
    <string name="user_name">Username</string>
    <string name="user_password">Password</string>
    <string name="login">LOG IN</string>
    <string name="next">NEXT</string>
    <string name="logging_in">Logging In...</string>
    <string name="invalid_username">Invalid username.</string>
    <string name="no_user">Specified account does not exist.</string>
    <string name="login_exception">Unable to connect to server.</string>
    <string name="retry">RETRY</string>
    <string name="stay_signed_in">Stay signed in</string>

</resources>
