<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    style="@style/CcfTheme.CardView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.ccf.android.ui.widget.BackImageView
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginBottom="-48dp" />

        <com.ccf.android.ui.widget.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:src="@drawable/ic_account_circle" />

        <TextView
            android:id="@+id/user_name_lastname"
            style="@style/CcfTheme.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <com.ccf.android.ui.widget.PasswordEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_password"
                android:nextFocusDown="@+id/login_button" />
        </android.support.design.widget.TextInputLayout>

        <com.ccf.android.ui.widget.Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <TextView
            android:id="@+id/logging_text"
            style="@style/CcfTheme.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/logging_in"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
            android:visibility="gone" />
    </LinearLayout>
</android.support.v7.widget.CardView>