<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ccf.logic.view.LoginFragment_">

    <com.rey.material.widget.ProgressView
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_gravity="center"
        app:pv_autostart="false"
        app:pv_circular="false"
        app:pv_progressMode="indeterminate"
        app:pv_progressStyle="@style/Material.Drawable.LinearProgress" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            card_view:cardCornerRadius="12dp"
            card_view:cardElevation="4dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/back_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginBottom="-48dp"
                    android:src="@drawable/ic_keyboard_arrow_left"
                    android:visibility="invisible" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:src="@drawable/ic_account_circle" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/login_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="15dp"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true">

                            <EditText
                                android:id="@+id/login_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/user_name"
                                android:maxLines="1"
                                android:nextFocusDown="@+id/next_button"
                                android:singleLine="true"
                                android:textAppearance="?android:attr/textAppearanceLarge" />
                        </android.support.design.widget.TextInputLayout>

                        <com.rey.material.widget.Button
                            android:id="@+id/next_button"
                            style="@style/Material.Drawable.Ripple.Touch.Light"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:background="@null"
                            android:text="@string/next"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
                            android:textColor="@android:color/holo_blue_dark"
                            android:textSize="@dimen/abc_text_size_medium_material"
                            app:rd_backgroundColor="#33219AFF"
                            app:rd_cornerRadius="4dp"
                            app:rd_rippleColor="#33219AFF" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/password_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:orientation="vertical"
                        android:visibility="invisible">

                        <TextView
                            android:id="@+id/user_name_lastname"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Medium Text"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#ff00ddff" />

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp">

                            <EditText
                                android:id="@+id/login_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:hint="@string/user_password"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:nextFocusDown="@+id/login_button"
                                android:singleLine="true"
                                android:textAppearance="?android:attr/textAppearanceLarge" />
                        </android.support.design.widget.TextInputLayout>

                        <com.rey.material.widget.Button
                            android:id="@+id/login_button"
                            style="@style/Material.Drawable.Ripple.Touch.Light"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:background="@null"
                            android:text="@string/login"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
                            android:textColor="@android:color/holo_blue_dark"
                            android:textSize="@dimen/abc_text_size_medium_material"
                            app:rd_backgroundColor="#33219AFF"
                            app:rd_cornerRadius="4dp"
                            app:rd_delayClick="afterRelease"
                            app:rd_rippleColor="#33219AFF" />

                        <TextView
                            android:id="@+id/logging_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:gravity="center"
                            android:text="@string/logging_in"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="@dimen/abc_text_size_medium_material"
                            android:visibility="gone" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>

</LinearLayout>
